--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
@@ -24,6 +28,7 @@
     "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
