--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
@@ -28,7 +26,6 @@
     "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
-    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,7 +53,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/react-slick": "^0.23.10",
-    "compass": "^0.1.1"
+    "compass": "^0.1.1",
+    "jest": "^29.6.4",
+    "typescript": "^5.2.2"
   }
 }
