--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -53,16 +52,21 @@
   "devDependencies": {
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
+    "@jest/globals": "^29.6.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.0",
     "babel-jest": "^29.6.4",
     "compass": "^0.1.1",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
