--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "date-fns": "^2.30.0",
     "firebase": "^10.3.1",
     "moxios": "^0.4.0",
     "nanoid": "^4.0.2",
