--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.7",
