--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "^29.5.4",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.0",
+    "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.6.4",
     "compass": "^0.1.1",
     "jest": "^29.6.4",
